flux/apps/yamtrack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yamtrack
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://yamtrack.multimedia-factory.svc:8000"
    uptime-kuma.io/name: "floppy"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Media & Streaming"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yamtrack
  template:
    metadata:
      labels:
        app: yamtrack
    spec:
      enableServiceLinks: false
      containers:
        - name: floppy
          image: ghcr.io/dannyvfilms/floppy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
