flux/apps/yamtrack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yamtrack-redis
  namespace: multimedia-factory
spec:
  selector:
    app: yamtrack-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: yamtrack
  namespace: multimedia-factory
spec:
  selector:
    app: yamtrack
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
